gateway-k8s/gateway-elasticsearch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-elasticsearch
  namespace: fridgy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-elasticsearch
  template:
    metadata:
      labels:
        app: gateway-elasticsearch
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: data
          emptyDir: {}
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.9.3
          ports:
            - containerPort: 9200
              name: http
              protocol: TCP
            - containerPort: 9300
              name: transport
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /usr/share/elasticsearch/data/
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-elasticsearch
  namespace: fridgy
spec:
  selector:
    app: gateway-elasticsearch
  ports:
    - port: 9200
      name: http
      protocol: TCP
    - port: 9300
      name: transport
      protocol: TCP
