gateway-k8s/gateway-postgresql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-postgresql
  namespace: fridgy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-postgresql
  template:
    metadata:
      labels:
        app: gateway-postgresql
    spec:
      volumes:
        - name: data
          emptyDir: {}
      containers:
        - name: postgres
          image: postgres:13.2
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-postgresql
  namespace: fridgy
spec:
  selector:
    app: gateway-postgresql
  ports:
    - port: 5432
